= Changelog
:toc: macro
ifdef::env-github[]
:toc-title:
:tip-caption: :bulb:
:note-caption: :bulb:
:important-caption: :heavy_exclamation_mark:
:caution-caption: :fire:
:warning-caption: :warning:
endif::[]

ifdef::env-github[]
[discrete]
== Contents
endif::[]
toc::[]

:link-proxy-from-env: https://golang.org/pkg/net/http/#ProxyFromEnvironment

== HEAD

== v2.1.5 - 2020-08-11
*   Rebuild release with go-1.15

== v2.1.4 - 2020-02-18
*   Rebuild release with go-1.13.8
*   Experimental windows build

== v2.1.3 - 2019-12-18
*   Rebuild release with go-1.13.5

== v2.1.2 - 2019-11-17
*   Fix for enabling metrics collection in proxy

== v2.1.1 - 2019-11-12

*   Security fixes / content-type validation
*   Add `ProxyFromEnvironment` support. This uses HTTP proxies directed by the
    `HTTP_PROXY` and `NO_PROXY` (or `http_proxy` and `no_proxy`) environment
    variables. See {link-proxy-from-env} for more info.

== v2.1.0 - 2019-10-02

*   Support `audio/*` with `--allow-content-audio` flag (similar to how video
    is handled)
*   Additional metrics datapoints when using `--metrics`
*   Support only go 1.13, due to use of new error wrapping semantics
*   Improve client connection early abort handling
*   Improve max response side handling -- only read MaxSize KB from any
    upstream server. Note: This may result in partial responses to clients for
    chunked encoding requests that are longer than MaxSize, as there is no way
    to signal the client other than closing the connection.
*   Change default of `--max-size` to 0, as previously chunked encoding
    responses bypassed size restrictions (only content-length was previously
    enforced). To avoid unexpected failures (preserve backwards compatibility
    in this regard), set max-size to 0 by default moving forward. Previous
    default was 5mb (use `--max-size=5120` to set to previous default).

== v2.0.1 - 2019-09-12

*   Slightly optimize some structure layouts to reduce memory overhead.