@@ -2,7 +2,7 @@ name: "CodeQL"
 
 on:
   push:
-    branches: [master]
+    branches: ['**']
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [master]
