@@ -18,6 +18,7 @@ toc::[]
 :link-proxy-from-env: https://golang.org/pkg/net/http/#ProxyFromEnvironment
 
 == HEAD
+*   Move ip filtering to Dialer.Control, to further improve SSRF protections
 
 == v2.1.5 - 2020-08-11
 *   Rebuild release with go-1.15
